Fixed sidebar overflow

--- a/data/sidebar.css
+++ b/data/sidebar.css
@@ -53,7 +53,8 @@ li {
   margin-block-start: 0;
   margin-block-end: 0;
   padding-inline-start: 0;
-  overflow: auto;
+  overflow-x: hidden;
+  overflow-y: auto;
 }
 
 .hidePassingTests .ok {
